syntax = "proto3";

package services;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "api/models/rule.proto";
import "api/models/rule_execution.proto";

option go_package = "github.com/foxcool/greedy-eye/internal/api/services";

// RuleService provides rule management and execution services
service RuleService {
  // Rule CRUD operations
  rpc CreateRule(CreateRuleRequest) returns (models.Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules"
      body: "rule"
    };
  }
  
  rpc GetRule(GetRuleRequest) returns (models.Rule) {
    option (google.api.http) = {
      get: "/api/v1/rules/{id}"
    };
  }
  
  rpc UpdateRule(UpdateRuleRequest) returns (models.Rule) {
    option (google.api.http) = {
      put: "/api/v1/rules/{rule.id}"
      body: "rule"
    };
  }
  
  rpc DeleteRule(DeleteRuleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/rules/{id}"
    };
  }
  
  rpc ListRules(ListRulesRequest) returns (ListRulesResponse) {
    option (google.api.http) = {
      get: "/api/v1/rules"
    };
  }
  
  rpc ListRulesByPortfolio(ListRulesByPortfolioRequest) returns (ListRulesResponse) {
    option (google.api.http) = {
      get: "/api/v1/portfolios/{portfolio_id}/rules"
    };
  }
  
  // Rule execution operations
  rpc ExecuteRule(ExecuteRuleRequest) returns (ExecuteRuleResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/execute"
      body: "*"
    };
  }
  
  rpc ExecuteRuleAsync(ExecuteRuleAsyncRequest) returns (ExecuteRuleAsyncResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/execute-async"
      body: "*"
    };
  }
  
  rpc GetRuleExecution(GetRuleExecutionRequest) returns (models.RuleExecution) {
    option (google.api.http) = {
      get: "/api/v1/rule-executions/{execution_id}"
    };
  }
  
  rpc ListRuleExecutions(ListRuleExecutionsRequest) returns (ListRuleExecutionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/rules/{rule_id}/executions"
    };
  }
  
  rpc CancelRuleExecution(CancelRuleExecutionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/rule-executions/{execution_id}/cancel"
      body: "*"
    };
  }
  
  // Rule validation and simulation
  rpc ValidateRule(ValidateRuleRequest) returns (ValidateRuleResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/validate"
      body: "rule"
    };
  }
  
  rpc SimulateRule(SimulateRuleRequest) returns (SimulateRuleResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/simulate"
      body: "*"
    };
  }
  
  // Rule status management
  rpc EnableRule(EnableRuleRequest) returns (models.Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/enable"
      body: "*"
    };
  }
  
  rpc DisableRule(DisableRuleRequest) returns (models.Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/disable"
      body: "*"
    };
  }
  
  rpc PauseRule(PauseRuleRequest) returns (models.Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/pause"
      body: "*"
    };
  }
  
  rpc ResumeRule(ResumeRuleRequest) returns (models.Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/resume"
      body: "*"
    };
  }
}

// Rule CRUD messages
message CreateRuleRequest {
  models.Rule rule = 1;
}

message GetRuleRequest {
  string id = 1;
}

message UpdateRuleRequest {
  models.Rule rule = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteRuleRequest {
  string id = 1;
}

message ListRulesRequest {
  optional string user_id = 1;
  optional string portfolio_id = 2;
  optional string rule_type = 3;
  optional models.RuleStatus status = 4;
  optional int32 page_size = 5;
  optional string page_token = 6;
}

message ListRulesResponse {
  repeated models.Rule rules = 1;
  string next_page_token = 2;
}

message ListRulesByPortfolioRequest {
  string portfolio_id = 1;
  optional models.RuleStatus status = 2;
  optional int32 page_size = 3;
  optional string page_token = 4;
}

// Rule execution messages
message ExecuteRuleRequest {
  string rule_id = 1;
  bool dry_run = 2;
  optional string execution_context = 3;
}

message ExecuteRuleResponse {
  models.RuleExecution execution = 1;
}

message ExecuteRuleAsyncRequest {
  string rule_id = 1;
  bool dry_run = 2;
  optional string execution_context = 3;
}

message ExecuteRuleAsyncResponse {
  string execution_id = 1;
  string status = 2;
}

message GetRuleExecutionRequest {
  string execution_id = 1;
}

message ListRuleExecutionsRequest {
  string rule_id = 1;
  optional models.ExecutionStatus status = 2;
  optional google.protobuf.Timestamp from_date = 3;
  optional google.protobuf.Timestamp to_date = 4;
  optional int32 page_size = 5;
  optional string page_token = 6;
}

message ListRuleExecutionsResponse {
  repeated models.RuleExecution executions = 1;
  string next_page_token = 2;
}

message CancelRuleExecutionRequest {
  string execution_id = 1;
  string reason = 2;
}

// Rule validation and simulation messages
message ValidateRuleRequest {
  models.Rule rule = 1;
}

message ValidateRuleResponse {
  bool valid = 1;
  repeated string validation_errors = 2;
  repeated string warnings = 3;
}

message SimulateRuleRequest {
  string rule_id = 1;
  optional google.protobuf.Timestamp simulate_at = 2;
  bool include_costs = 3;
}

message SimulateRuleResponse {
  bool success = 1;
  SimulationResult result = 2;
  repeated string warnings = 3;
  string error_message = 4;
}

message SimulationResult {
  double estimated_cost = 1;
  int32 estimated_steps = 2;
  int64 estimated_duration_ms = 3;
  
  // Rule-specific simulation results
  oneof rule_result {
    RebalancingSimulation rebalancing = 4;
    WithdrawalSimulation withdrawal = 5;
    StopLossSimulation stop_loss = 6;
    DCASimulation dca = 7;
  }
}

message RebalancingSimulation {
  double current_total_value = 1;
  repeated AssetAllocation current_allocations = 2;
  repeated AssetAllocation target_allocations = 3;
  repeated PlannedTrade planned_trades = 4;
  double total_estimated_fees = 5;
}

message AssetAllocation {
  string asset_id = 1;
  double current_amount = 2;
  double current_percentage = 3;
  double target_percentage = 4;
  double difference = 5;
}

message PlannedTrade {
  string asset_id = 1;
  string action = 2; // "buy" or "sell"
  double amount = 3;
  double estimated_price = 4;
  double estimated_fee = 5;
}

message WithdrawalSimulation {
  double available_balance = 1;
  double requested_amount = 2;
  bool sufficient_funds = 3;
  repeated AssetWithdrawalPlan withdrawal_plan = 4;
}

message AssetWithdrawalPlan {
  string asset_id = 1;
  double amount_to_withdraw = 2;
  double estimated_value = 3;
  bool needs_selling = 4;
}

message StopLossSimulation {
  double current_portfolio_value = 1;
  double stop_loss_threshold = 2;
  double current_loss_percentage = 3;
  bool would_trigger = 4;
  repeated AssetStopLoss asset_actions = 5;
}

message AssetStopLoss {
  string asset_id = 1;
  double current_amount = 2;
  double amount_to_sell = 3;
  double estimated_value = 4;
}

message DCASimulation {
  double available_balance = 1;
  double dca_amount = 2;
  string target_asset_id = 3;
  double estimated_purchase_amount = 4;
  double estimated_price = 5;
  double estimated_fee = 6;
  bool sufficient_funds = 7;
}

// Rule status management messages
message EnableRuleRequest {
  string rule_id = 1;
}

message DisableRuleRequest {
  string rule_id = 1;
}

message PauseRuleRequest {
  string rule_id = 1;
  string reason = 2;
}

message ResumeRuleRequest {
  string rule_id = 1;
} 