syntax = "proto3";

package storage;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./storage";

service StorageService {
  // Asset operations
  rpc StoreAsset(Asset) returns (Asset);
  rpc GetAsset(AssetRequest) returns (Asset);
  rpc ListAssets(ListAssetsRequest) returns (ListAssetsResponse);
  rpc DeleteAsset(AssetRequest) returns (google.protobuf.Empty);

  // Price operations
  rpc StorePrice(Price) returns (Price);
  rpc StorePrices(StorePricesRequest) returns (StorePricesResponse);
  rpc GetLatestPrice(PriceRequest) returns (Price);
  rpc GetPriceHistory(PriceHistoryRequest) returns (PriceHistoryResponse);
  rpc GetPricesByInterval(PriceIntervalRequest) returns (PriceHistoryResponse);

  // Portfolio operations
  rpc StorePortfolio(Portfolio) returns (Portfolio);
  rpc GetPortfolio(PortfolioRequest) returns (Portfolio);
  rpc ListPortfolios(ListPortfoliosRequest) returns (ListPortfoliosResponse);
  rpc DeletePortfolio(PortfolioRequest) returns (google.protobuf.Empty);

  // Holdings operations
  rpc StoreHolding(Holding) returns (Holding);
  rpc GetHolding(HoldingRequest) returns (Holding);
  rpc ListHoldings(ListHoldingsRequest) returns (ListHoldingsResponse);
  rpc GetHoldingHistory(HoldingHistoryRequest) returns (HoldingHistoryResponse);

  // User operations
  rpc StoreUser(User) returns (User);
  rpc GetUser(UserRequest) returns (User);
  rpc DeleteUser(UserRequest) returns (google.protobuf.Empty);

  // Account operations
  rpc StoreAccount(Account) returns (Account);
  rpc GetAccount(AccountRequest) returns (Account);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
  rpc DeleteAccount(AccountRequest) returns (google.protobuf.Empty);

  // Transaction operations
  rpc StoreTransaction(Transaction) returns (Transaction);
  rpc GetTransaction(TransactionRequest) returns (Transaction);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}

// Basic messages
message Asset {
  string id = 1;
  string symbol = 2;
  string name = 3;
  repeated string tags = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Price {
  string id = 1;
  string asset_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  double value = 4;
  string currency = 5;
  string source = 6; // "coingecko", "binance", etc.
}

message Portfolio {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Holding {
  string id = 1;
  string portfolio_id = 2;
  string asset_id = 3;
  double quantity = 4;
  string location = 5; // "binance", "eth_main", etc.
  google.protobuf.Timestamp timestamp = 6;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  map<string, string> preferences = 4;
}

message Account {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  string type = 5; // "exchange", "wallet", etc.
  map<string, string> data = 6; // Credentials and other sensitive data
}

message Transaction {
  string id = 1;
  string portfolio_id = 2;
  string account_id = 3;
  string asset_id = 4;
  double amount = 5;
  double fee = 6;
  string fee_asset_id = 7;
  string type = 8; // "buy", "sell", "transfer", etc.
  string status = 9; // "pending", "completed", "failed"
  google.protobuf.Timestamp timestamp = 10;
  map<string, string> metadata = 11;
}

// Request/Response messages
message AssetRequest {
  string id = 1;
  string symbol = 2; // Alternative lookup
}

message ListAssetsRequest {
  int32 page_size = 1;
  string page_token = 2;
  repeated string tags = 3;
}

message ListAssetsResponse {
  repeated Asset assets = 1;
  string next_page_token = 2;
}

message StorePricesRequest {
  repeated Price prices = 1;
}

message StorePricesResponse {
  int32 stored_count = 1;
  repeated string failed_ids = 2;
}

message PriceRequest {
  string asset_id = 1;
  string source = 2; // Optional filter
}

message PriceHistoryRequest {
  string asset_id = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  string source = 4; // Optional filter
}

message PriceHistoryResponse {
  repeated Price prices = 1;
}

message PriceIntervalRequest {
  string asset_id = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  string interval = 4; // "hour", "day", "week", "month"
  string source = 5; // Optional filter
}

message PortfolioRequest {
  string id = 1;
}

message ListPortfoliosRequest {
  string user_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListPortfoliosResponse {
  repeated Portfolio portfolios = 1;
  string next_page_token = 2;
}

message HoldingRequest {
  string id = 1;
  string portfolio_id = 2;
  string asset_id = 3;
}

message ListHoldingsRequest {
  string portfolio_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListHoldingsResponse {
  repeated Holding holdings = 1;
  string next_page_token = 2;
}

message HoldingHistoryRequest {
  string portfolio_id = 1;
  string asset_id = 2; // Optional filter
  google.protobuf.Timestamp from = 3;
  google.protobuf.Timestamp to = 4;
}

message HoldingHistoryResponse {
  repeated Holding holdings = 1;
}

message UserRequest {
  string id = 1;
}

message AccountRequest {
  string id = 1;
}

message ListAccountsRequest {
  string user_id = 1;
  string type = 2; // Optional filter
}

message ListAccountsResponse {
  repeated Account accounts = 1;
}

message TransactionRequest {
  string id = 1;
}

message ListTransactionsRequest {
  string portfolio_id = 1;
  string asset_id = 2; // Optional filter
  string account_id = 3; // Optional filter
  string type = 4; // Optional filter
  google.protobuf.Timestamp from = 5; // Optional time range
  google.protobuf.Timestamp to = 6; // Optional time range
  int32 page_size = 7;
  string page_token = 8;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
  string next_page_token = 2;
}
